Data imported from src db

--- a/source/src/main/resources/META-INF/spring/properties/database.properties
+++ b/source/src/main/resources/META-INF/spring/properties/database.properties
@@ -1,7 +1,7 @@
 jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost/di_ass2_src?zeroDateTimeBehavior=round
 jdbc.username=root
-jdbc.password=naveed
+jdbc.password=
 jdbc.database=MYSQL
 jdbc.showSql=true
 jdbc.generateDdl=true
